# BasicSR

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish-pip.yml  pylint.yml  release.yml
basicsr/: test.py  train.py
basicsr/archs/: arch_util.py  basicvsr_arch.py  basicvsrpp_arch.py  dfdnet_arch.py  dfdnet_util.py  discriminator_arch.py  duf_arch.py  ecbsr_arch.py  edsr_arch.py  edvr_arch.py  hifacegan_arch.py  hifacegan_util.py  inception.py  rcan_arch.py  ridnet_arch.py  rrdbnet_arch.py  spynet_arch.py  srresnet_arch.py  stylegan2_arch.py  stylegan2_bilinear_arch.py  swinir_arch.py  tof_arch.py  vgg_arch.py
basicsr/data/: __init__.py  data_util.py  degradations.py  ffhq_dataset.py  paired_image_dataset.py  prefetch_dataloader.py  realesrgan_dataset.py  realesrgan_paired_dataset.py  reds_dataset.py  single_image_dataset.py  transforms.py  video_test_dataset.py  vimeo90k_dataset.py
basicsr/losses/: __init__.py  basic_loss.py  gan_loss.py  loss_util.py
basicsr/metrics/: __init__.py  fid.py  metric_util.py  niqe.py  psnr_ssim.py
basicsr/models/: base_model.py  edvr_model.py  esrgan_model.py  hifacegan_model.py  lr_scheduler.py  realesrgan_model.py  realesrnet_model.py  sr_model.py  srgan_model.py  stylegan2_model.py  swinir_model.py  video_base_model.py  video_gan_model.py  video_recurrent_gan_model.py  video_recurrent_model.py
basicsr/ops/dcn/: __init__.py  (+1 more)
basicsr/utils/: __init__.py  color_util.py  diffjpeg.py  download_util.py  file_client.py  flow_util.py  img_process_util.py  img_util.py  lmdb_util.py  logger.py  matlab_functions.py  misc.py  options.py  plot_util.py  registry.py
docs/: requirements.txt
inference/: inference_basicvsr.py  inference_basicvsrpp.py  inference_dfdnet.py  inference_esrgan.py  inference_ridnet.py  inference_stylegan2.py  inference_swinir.py
scripts/: download_pretrained_models.py  publish_models.py
scripts/data_preparation/: create_lmdb.py  download_datasets.py  extract_images_from_tfrecords.py  extract_subimages.py  generate_meta_info.py  prepare_hifacegan_dataset.py
scripts/metrics/: calculate_fid_folder.py  calculate_fid_stats_from_datasets.py  calculate_lpips.py  calculate_niqe.py  calculate_psnr_ssim.py  calculate_stylegan2_fid.py
scripts/model_conversion/: convert_dfdnet.py  convert_models.py  convert_ridnet.py  convert_stylegan.py
(+6 files in other folders)
